Added password hashing during signup and during login

--- a/housing-website-v3/server/.env
+++ b/housing-website-v3/server/.env
@@ -1,4 +1,3 @@
-HOST_IP = '35.221.15.116'
-USER= 'root'
-PASSWORD= "Nx565*beC7I&"
-DATABASE= 'housing'
+DB_IP = 34.145.165.21
+DB_USER = "user"
+DB_DATABASE = housing-db
