--- a/server/package.json
+++ b/server/package.json
@@ -18,5 +18,8 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.2.1",
     "smartystreets-javascript-sdk": "^2.1.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
